# toms-data-onion

./: README.md
layer_0_ascii85/: Cargo.toml
layer_0_ascii85/src/: ascii85.rs  lib.rs  main.rs
layer_1_bitwise/: Cargo.toml
layer_1_bitwise/src/: main.rs
layer_2_parity/: Cargo.toml
layer_2_parity/src/: main.rs
layer_3_xor/: Cargo.toml
layer_3_xor/src/: first_attempt.rs  main.rs
layer_4_network/: Cargo.toml
layer_4_network/src/: main.rs
layer_5_aes/: Cargo.toml
layer_5_aes/src/: main.rs
layer_6_vm/: Cargo.toml
layer_6_vm/src/: main.rs
