[package]
name = "layer_2_parity"
version = "0.1.0"
authors = ["John Lusty <54030459+jlusty@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layer_0_ascii85 = { path = "../layer_0_ascii85" }
